vulkan_errors.txt
cargo :     Checking larql-compute v0.1.0 (D:\User Files\Desktop\larql\crates\larql-compute)
At line:1 char:1
+ cargo check -p larql-compute --features vulkan 2>&1 | Out-File -FileP ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking la...\larql-compute):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `super::VulkanBackend`
 --> crates\larql-compute\src\vulkan\decode\mod.rs:4:5
  |
4 | use super::VulkanBackend;
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `profile::ProfileTimings`
  --> crates\larql-compute\src\vulkan\decode\mod.rs:18:9
   |
18 | pub use profile::ProfileTimings;
   |         ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `PrimaryCommandBufferAbstract`
 --> crates\larql-compute\src\vulkan\f32_ops.rs:7:77
  |
7 | use vulkano::command_buffer::{AutoCommandBufferBuilder, CommandBufferUsage, PrimaryCommandBufferAbstract};
  |                                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `PrimaryCommandBufferAbstract`
 --> crates\larql-compute\src\vulkan\ops\f32_gemv.rs:5:77
  |
5 | use vulkano::command_buffer::{AutoCommandBufferBuilder, CommandBufferUsage, PrimaryCommandBufferAbstract};
  |                                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `super::*`
 --> crates\larql-compute\src\vulkan\ops\kv_cache.rs:3:5
  |
3 | use super::*;
  |     ^^^^^^^^

warning: unused import: `PrimaryCommandBufferAbstract`
 --> crates\larql-compute\src\vulkan\ops\q4k_matvec.rs:5:77
  |
5 | use vulkano::command_buffer::{AutoCommandBufferBuilder, CommandBufferUsage, PrimaryCommandBufferAbstract};
  |                                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `PrimaryCommandBufferAbstract`
 --> crates\larql-compute\src\vulkan\ops\q8_quantize.rs:5:77
  |
5 | use vulkano::command_buffer::{AutoCommandBufferBuilder, CommandBufferUsage, PrimaryCommandBufferAbstract};
  |                                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `PrimaryCommandBufferAbstract`
 --> crates\larql-compute\src\vulkan\ops\rms_norm.rs:5:77
  |
5 | use vulkano::command_buffer::{AutoCommandBufferBuilder, CommandBufferUsage, PrimaryCommandBufferAbstract};
  |                                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `PrimaryCommandBufferAbstract`
 --> crates\larql-compute\src\vulkan\ops\rope.rs:5:77
  |
5 | use vulkano::command_buffer::{AutoCommandBufferBuilder, CommandBufferUsage, PrimaryCommandBufferAbstract};
  |                                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `PrimaryCommandBufferAbstract`
 --> crates\larql-compute\src\vulkan\ops\silu.rs:5:77
  |
5 | use vulkano::command_buffer::{AutoCommandBufferBuilder, CommandBufferUsage, PrimaryCommandBufferAbstract};
  |                                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `PrimaryCommandBufferAbstract`
 --> crates\larql-compute\src\vulkan\ops\turboquant.rs:5:77
  |
5 | use vulkano::command_buffer::{AutoCommandBufferBuilder, CommandBufferUsage, PrimaryCommandBufferAbstract};
  |                                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::vulkan::shaders`
  --> crates\larql-compute\src\vulkan\stages\ffn.rs:18:5
   |
18 | use crate::vulkan::shaders;
   |     ^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::vulkan::shaders`
  --> crates\larql-compute\src\vulkan\stages\qkv_proj.rs:18:5
   |
18 | use crate::vulkan::shaders;
   |     ^^^^^^^^^^^^^^^^^^^^^^

error[E0063]: missing field `mode` in initializer of `shaders::rope::PushConstants`
  --> crates\larql-compute\src\vulkan\ops\rope.rs:46:26
   |
46 |     let push_constants = shaders::rope::PushConstants {
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `mode`

error[E0560]: struct `shaders::rms_norm::PushConstants` has no field named `K`
  --> crates\larql-compute\src\vulkan\stages\residual.rs:84:17
   |
84 |                 K: hidden_val,
   |                 ^ `shaders::rms_norm::PushConstants` does not have this field
   |
   = note: available fields are: `len`

error[E0560]: struct `residual_ops::PushConstants` has no field named `K`
   --> crates\larql-compute\src\vulkan\stages\residual.rs:114:17
    |
114 |                 K: hidden_val,
    |                 ^ `residual_ops::PushConstants` does not have this field
    |
    = note: available fields are: `len`

error[E0560]: struct `residual_ops::PushConstants` has no field named `K`
   --> crates\larql-compute\src\vulkan\stages\residual.rs:142:17
    |
142 |                 K: hidden_val,
    |                 ^ `residual_ops::PushConstants` does not have this field
    |
    = note: available fields are: `len`

error[E0560]: struct `shaders::rms_norm::PushConstants` has no field named `K`
   --> crates\larql-compute\src\vulkan\stages\residual.rs:173:13
    |
173 |             K: hidden_val,
    |             ^ `shaders::rms_norm::PushConstants` does not have this field
    |
    = note: available fields are: `len`

error[E0560]: struct `shaders::rms_norm::PushConstants` has no field named `K`
   --> crates\larql-compute\src\vulkan\stages\residual.rs:273:21
    |
273 |                     K: hidden_val,
    |                     ^ `shaders::rms_norm::PushConstants` does not have this field
    |
    = note: available fields are: `len`

error[E0560]: struct `residual_ops::PushConstants` has no field named `K`
   --> crates\larql-compute\src\vulkan\stages\residual.rs:300:21
    |
300 |                     K: hidden_val,
    |                     ^ `residual_ops::PushConstants` does not have this field
    |
    = note: available fields are: `len`

error[E0560]: struct `residual_ops::PushConstants` has no field named `K`
   --> crates\larql-compute\src\vulkan\stages\residual.rs:331:13
    |
331 |             K: hidden_val,
    |             ^ `residual_ops::PushConstants` does not have this field
    |
    = note: available fields are: `len`

warning: unused variable: `k`
  --> crates\larql-compute\src\vulkan\f32_ops.rs:62:9
   |
62 |         k: usize,
   |         ^ help: if this is intentional, prefix it with an underscore: `_k`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `k`
  --> crates\larql-compute\src\vulkan\ops\f32_gemv.rs:16:5
   |
16 |     k: u32,
   |     ^ help: if this is intentional, prefix it with an underscore: `_k`

warning: unused variable: `eps`
  --> crates\larql-compute\src\vulkan\ops\rms_norm.rs:15:5
   |
15 |     eps: f32,
   |     ^^^ help: if this is intentional, prefix it with an underscore: `_eps`

warning: unused variable: `len`
  --> crates\larql-compute\src\vulkan\ops\rms_norm.rs:24:9
   |
24 |     let len = x.len() as u32;
   |         ^^^ help: if this is intentional, prefix it with an underscore: `_len`

warning: unused variable: `cap`
  --> crates\larql-compute\src\vulkan\trait_impl\mod.rs:23:24
   |
23 |     fn supports(&self, cap: Capability) -> bool {
   |                        ^^^ help: if this is intentional, prefix it with an underscore: `_cap`

Some errors have detailed explanations: E0063, E0560.
For more information about an error, try `rustc --explain E0063`.
warning: `larql-compute` (lib) generated 18 warnings
error: could not compile `larql-compute` (lib) due to 8 previous errors; 18 warnings emitted
